Disable flattening the stage iframe of the graphics benchmark when running on iOS https://bugs.webkit.org/show_bug.cgi?id=151361
Reviewed by Simon Fraser.

Use fixed size for stage iframe of the graphics benchmark to disable
flattening the iframe while animating the particles. Also ensure the
bouncing particles do not go outside the iframe's boundaries.

* Animometer/runner/resources/animometer.css:
(section#running > #running-test > iframe):
(@media screen and (min-device-width: 1800px)):
* Animometer/tests/bouncing-particles/resources/bouncing-particles.js:
(BouncingParticle.prototype.animate):


Canonical link: https://commits.webkit.org/169529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192550 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PerformanceTests/Animometer/runner/resources/animometer.css
+++ b/PerformanceTests/Animometer/runner/resources/animometer.css
@@ -328,9 +328,10 @@ section#running > #running-test {
 }
 
 section#running > #running-test > iframe {
-    width: 100%;
-    height: 100%;
+    width: 800px;
+    height: 600px;
     border: 0px none;
+    overflow: hidden;
 }
 
 section#running > #progress {
@@ -359,6 +360,13 @@ section#running > #record {
     left: 0px;
     right: 0px;
     padding: 16px;
+}
+
+@media screen and (min-device-width: 1800px) {
+    section#running > #running-test > iframe {
+        width: 1600px;
+        height: 800px;
+    }
 }
 
 /* -------------------------------------------------------------------------- */
